Clarify section headings in notebook

--- a/Data_Preparation.ipynb
+++ b/Data_Preparation.ipynb
@@ -52,6 +52,7 @@
     {
       "cell_type": "markdown",
       "source": [
+        "# 1. Find and download a dataset\n",
         "Raw data from:\n",
         "Clore, J., Cios, K., DeShazo, J., & Strack, B. (2014). *Diabetes 130-US Hospitals for Years 1999-2008* [Dataset]. UCI Machine Learning Repository. https://doi.org/10.24432/C5230J.\n",
         "\n",
@@ -720,15 +721,6 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Data Cleaning"
-      ],
-      "metadata": {
-        "id": "AMHUCfChXNeS"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
         "This dataset includes multiple rows for some patient IDs (`patient_nbr`) if they were hospitalized more than once. Previous admissions and diagnoses are likely to be predictive of future outcomes, and a patient's past medical record would be available at the time of their current admission. Thus, it makes sense to create features based on this information *before* splitting the data into train and test sets (since basing a number of past admissions on a fraction of the dataset only would underestimate the true value). The dataset contains counts of previous inpatient, outpatient, and emergency encounters within the past year, but the dataset includes data from multiple years, so a patient's previous number of admissions may exceed the sum of these values.\n",
         "\n",
         "The `readmitted` variable in the dataset takes three (categorical) values:\n",
@@ -815,6 +807,7 @@
     {
       "cell_type": "markdown",
       "source": [
+        "#2: Divide into a training set and a testing set\n",
         "In the original paper, the authors were interested specifically in readmission within 30 days, stating that \"30 days was chosen based on criteria often used by funding agencies,\" so it seems reasonable to use readmission within this time frame as a binary target variable. It may also be possible to fit a multiclass classification model for all three possible values of `readmitted`.\n",
         "\n",
         "Because the data requires some cleaning (certain observations need to be dropped), it's easiest to generate the train/test split without separating the target variable from the features, clean the data, and finally separate X (features) from y (target) before beginning to fit models."
@@ -829,150 +822,48 @@
         "# stratifying by readmitted will also stratify by readmit_less30 since <30 is one of the values readmitted takes,\n",
         "# so this should be fine whichever we choose to use as the target\n",
         "train, test = train_test_split(patients, random_state=1701, stratify=patients['readmitted'], test_size=0.2)\n",
-        "print(train.info())\n",
-        "print(train.isna().sum())"
+        "print(train.shape)\n",
+        "print(test.shape)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "MkpIYZYVn06y",
-        "outputId": "2fb13133-40f3-4807-b87d-99f6b6354317"
+        "outputId": "4ae22263-21f4-461a-bbf7-b52ad8e24737"
       },
-      "execution_count": 85,
+      "execution_count": 110,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "<class 'pandas.core.frame.DataFrame'>\n",
-            "Index: 81363 entries, 99354 to 78581\n",
-            "Data columns (total 58 columns):\n",
-            " #   Column                    Non-Null Count  Dtype \n",
-            "---  ------                    --------------  ----- \n",
-            " 0   encounter_id              81363 non-null  int64 \n",
-            " 1   patient_nbr               81363 non-null  int64 \n",
-            " 2   race                      79561 non-null  object\n",
-            " 3   gender                    81363 non-null  object\n",
-            " 4   age                       81363 non-null  object\n",
-            " 5   weight                    2564 non-null   object\n",
-            " 6   admission_type_id         81363 non-null  int64 \n",
-            " 7   discharge_disposition_id  81363 non-null  int64 \n",
-            " 8   admission_source_id       81363 non-null  int64 \n",
-            " 9   time_in_hospital          81363 non-null  int64 \n",
-            " 10  payer_code                49204 non-null  object\n",
-            " 11  medical_specialty         41401 non-null  object\n",
-            " 12  num_lab_procedures        81363 non-null  int64 \n",
-            " 13  num_procedures            81363 non-null  int64 \n",
-            " 14  num_medications           81363 non-null  int64 \n",
-            " 15  number_outpatient         81363 non-null  int64 \n",
-            " 16  number_emergency          81363 non-null  int64 \n",
-            " 17  number_inpatient          81363 non-null  int64 \n",
-            " 18  diag_1                    81363 non-null  object\n",
-            " 19  diag_2                    81074 non-null  object\n",
-            " 20  diag_3                    80216 non-null  object\n",
-            " 21  number_diagnoses          81363 non-null  int64 \n",
-            " 22  max_glu_serum             4244 non-null   object\n",
-            " 23  A1Cresult                 13605 non-null  object\n",
-            " 24  metformin                 81363 non-null  object\n",
-            " 25  repaglinide               81363 non-null  object\n",
-            " 26  nateglinide               81363 non-null  object\n",
-            " 27  chlorpropamide            81363 non-null  object\n",
-            " 28  glimepiride               81363 non-null  object\n",
-            " 29  acetohexamide             81363 non-null  object\n",
-            " 30  glipizide                 81363 non-null  object\n",
-            " 31  glyburide                 81363 non-null  object\n",
-            " 32  tolbutamide               81363 non-null  object\n",
-            " 33  pioglitazone              81363 non-null  object\n",
-            " 34  rosiglitazone             81363 non-null  object\n",
-            " 35  acarbose                  81363 non-null  object\n",
-            " 36  miglitol                  81363 non-null  object\n",
-            " 37  troglitazone              81363 non-null  object\n",
-            " 38  tolazamide                81363 non-null  object\n",
-            " 39  examide                   81363 non-null  object\n",
-            " 40  citoglipton               81363 non-null  object\n",
-            " 41  insulin                   81363 non-null  object\n",
-            " 42  glyburide-metformin       81363 non-null  object\n",
-            " 43  glipizide-metformin       81363 non-null  object\n",
-            " 44  glimepiride-pioglitazone  81363 non-null  object\n",
-            " 45  metformin-rosiglitazone   81363 non-null  object\n",
-            " 46  metformin-pioglitazone    81363 non-null  object\n",
-            " 47  change                    81363 non-null  object\n",
-            " 48  diabetesMed               81363 non-null  object\n",
-            " 49  readmitted                81363 non-null  object\n",
-            " 50  prev_encounters           81363 non-null  int64 \n",
-            " 51  prev_time_hospital        81363 non-null  int64 \n",
-            " 52  readmit_less30            81363 non-null  bool  \n",
-            " 53  prev_readmit_less30       81363 non-null  int64 \n",
-            " 54  description               81363 non-null  object\n",
-            " 55  category                  81363 non-null  object\n",
-            " 56  broad_category            81363 non-null  object\n",
-            " 57  n_diagnoses_ever          81363 non-null  int64 \n",
-            "dtypes: bool(1), int64(17), object(40)\n",
-            "memory usage: 36.1+ MB\n",
-            "None\n",
-            "encounter_id                    0\n",
-            "patient_nbr                     0\n",
-            "race                         1802\n",
-            "gender                          0\n",
-            "age                             0\n",
-            "weight                      78799\n",
-            "admission_type_id               0\n",
-            "discharge_disposition_id        0\n",
-            "admission_source_id             0\n",
-            "time_in_hospital                0\n",
-            "payer_code                  32159\n",
-            "medical_specialty           39962\n",
-            "num_lab_procedures              0\n",
-            "num_procedures                  0\n",
-            "num_medications                 0\n",
-            "number_outpatient               0\n",
-            "number_emergency                0\n",
-            "number_inpatient                0\n",
-            "diag_1                          0\n",
-            "diag_2                        289\n",
-            "diag_3                       1147\n",
-            "number_diagnoses                0\n",
-            "max_glu_serum               77119\n",
-            "A1Cresult                   67758\n",
-            "metformin                       0\n",
-            "repaglinide                     0\n",
-            "nateglinide                     0\n",
-            "chlorpropamide                  0\n",
-            "glimepiride                     0\n",
-            "acetohexamide                   0\n",
-            "glipizide                       0\n",
-            "glyburide                       0\n",
-            "tolbutamide                     0\n",
-            "pioglitazone                    0\n",
-            "rosiglitazone                   0\n",
-            "acarbose                        0\n",
-            "miglitol                        0\n",
-            "troglitazone                    0\n",
-            "tolazamide                      0\n",
-            "examide                         0\n",
-            "citoglipton                     0\n",
-            "insulin                         0\n",
-            "glyburide-metformin             0\n",
-            "glipizide-metformin             0\n",
-            "glimepiride-pioglitazone        0\n",
-            "metformin-rosiglitazone         0\n",
-            "metformin-pioglitazone          0\n",
-            "change                          0\n",
-            "diabetesMed                     0\n",
-            "readmitted                      0\n",
-            "prev_encounters                 0\n",
-            "prev_time_hospital              0\n",
-            "readmit_less30                  0\n",
-            "prev_readmit_less30             0\n",
-            "description                     0\n",
-            "category                        0\n",
-            "broad_category                  0\n",
-            "n_diagnoses_ever                0\n",
-            "dtype: int64\n"
+            "(81363, 58)\n",
+            "(20341, 58)\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 3: Explore your training set & 4: Data Cleaning"
+      ],
+      "metadata": {
+        "id": "oO5I2nBFsxDR"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(train.info())\n",
+        "print(train.isna().sum())"
+      ],
+      "metadata": {
+        "id": "6nIV1vgpsp2z"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -2104,7 +1995,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Data Exploration\n",
+        "# 5: Visualize the data in your training set\n",
         "\n",
         "## Numeric features"
       ],
@@ -2260,7 +2151,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Variable transformations\n",
+        "# 6: Apply transformations to your data\n",
         "\n",
         "(Most of these are unlikely to be used for model fitting)"
       ],
@@ -2776,6 +2667,7 @@
         "X_train_scaled = pd.DataFrame(ct.fit_transform(X_train), columns=ct.get_feature_names_out())\n",
         "X_test_scaled = pd.DataFrame(ct.transform(X_test), columns=ct.get_feature_names_out())\n",
         "\n",
+        "# Save dataset for use in projects 2 and 3\n",
         "pickle.dump([X_train_scaled, X_test_scaled, y_train, y_test], open(\"preprocessed_data.pkl\", \"wb\"))"
       ],
       "metadata": {
